--- a/index.html
+++ b/index.html
@@ -7,25 +7,72 @@
   <title>Frontend Mentor | Intro component with sign up form</title>
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/icons/favicon-32x32.png">
   <link rel="stylesheet" href="./css/custom.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h1>Hello World!</h1>
+  <div class="container">
+    <div class="row">
+
+      <!-- COSTADO-INFO -->
+
+      <div class="container-info col-12 col-lg-6 p-2 mb-5 d-flex flex-column justify-content-lg-center">
+        <h1 class="info-titulo fw-bold text-center text-lg-start mt-0 mb-4 lh-sm pe-lg-5">Learn to code by watching others</h1>
+        <p class="info-parrafo text-center text-lg-start m-0">See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
+          but understanding how developers think is invaluable. </p>
+      </div>
+
+      <!-- COSTADO-FORM -->
+
+      <div class="container-form col-12 col-lg-6 p-2 mt-2 p-0">
+
+              <!-- CTA -->
+
+        <a href="#" class="form__cta"><div>
+          <p><span class="fw-bolder">Try it free 7 days</span> then $20/mo. thereafter</p>
+        </div></a>
+
+              <!-- FORM -->
+
+        <div class="form__form col-12 mt-4 bg-white p-3">
+
+          <form action="" class="form__container" id="formulario">
+            <div class="form__field">
+              <input class="form__input" type="text" id="first-name" placeholder="First Name">
+              <span class="error-label"></span>
+              <img src="./assets/icons/icon-error.svg" alt="">
+            </div>
+            <div class="form__field">
+              <input class="form__input" type="text" id="last-name" placeholder="Last Name">
+              <span class="error-label"></span>
+              <img src="./assets/icons/icon-error.svg" alt="">
+            </div>
+            <div class="form__field">
+              <input class="form__input" type="email" id="email" placeholder="Email Address">
+              <span class="error-label"></span>
+              <img src="./assets/icons/icon-error.svg" alt="">
+            </div>
+            <div class="form__field">
+              <input class="form__input" type="password" id="password" placeholder="Password">
+              <span class="error-label"></span>
+              <img src="./assets/icons/icon-error.svg" alt="">
+            </div>
+            <div class="form__field">
+              <input class="form__input" type="password" id="password2" placeholder="Confirm Password">
+              <span class="error-label"></span>
+              <img src="./assets/icons/icon-error.svg" alt="">
+            </div>
+            <div class="form__field">
+              <input class="form__submit" type="submit" id="submit" value="Claim your free trial">
+            </div>
+            <p class="disclaimer">By clicking the button, you are agreeing to our <a href="#">Terms and Services</a></p>
+          </form>
+        </div>
+
+
+      </div>
+    </div>
+  </div>
+  <script src="formulario.js"></script>
 </body>
 </html>
-
-
-<!-- Learn to code by watching others
-
-  See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
-  but understanding how developers think is invaluable. 
-
-  Try it free 7 days then $20/mo. thereafter
-
-  First Name 
-  Last Name 
-  Email Address
-  Password
-
-  Claim your free trial 
-
-  By clicking the button, you are agreeing to our Terms and Services -->
